[project]
name = "langgraph-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.2.0",
    "langgraph>=1.0.3",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.13",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.13",
]
